// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Should render component for screen width greater than 1440 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="header_main"
        >
          <div
            class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
          >
            <span
              class="lmnt-badge--label__label"
            >
              myBadge
            </span>
          </div>
          <span
            class="mdc-typography lmnt mdc-typography--headline3"
          >
            Test
          </span>
          <span
            class="mdc-typography lmnt mdc-typography--body2"
          >
            cool description
          </span>
        </div>
        <div
          class="desktopButtonGroup"
        >
          <div
            class="lmnt lmnt-group"
            style="display: flex; flex-direction: row; justify-content: flex-start; align-items: baseline; gap: 8px;"
          >
            <button
              class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--themeDefault mdc-touch-target-wrapper"
              type="button"
            >
              <span
                class="mdc-button__ripple"
              />
              <span
                class="mdc-button__label"
              >
                create quote
              </span>
              <span
                class="mdc-button__touch"
              />
            </button>
            <button
              class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--themeDefault mdc-touch-target-wrapper"
              type="button"
            >
              <span
                class="mdc-button__ripple"
              />
              <span
                class="mdc-button__label"
              >
                edit
              </span>
              <span
                class="mdc-button__touch"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="header_main"
      >
        <div
          class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
        >
          <span
            class="lmnt-badge--label__label"
          >
            myBadge
          </span>
        </div>
        <span
          class="mdc-typography lmnt mdc-typography--headline3"
        >
          Test
        </span>
        <span
          class="mdc-typography lmnt mdc-typography--body2"
        >
          cool description
        </span>
      </div>
      <div
        class="desktopButtonGroup"
      >
        <div
          class="lmnt lmnt-group"
          style="display: flex; flex-direction: row; justify-content: flex-start; align-items: baseline; gap: 8px;"
        >
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              create quote
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              edit
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": undefined,
  "unmount": [Function],
}
`;

exports[`Header Should render component for screen width smaller than 600 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="header_main"
        >
          <div
            class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
          >
            <span
              class="lmnt-badge--label__label"
            >
              myBadge
            </span>
          </div>
          <span
            class="mdc-typography lmnt mdc-typography--headline5"
          >
            Test
          </span>
          <span
            class="mdc-typography lmnt mdc-typography--body2"
          >
            <span
              class="mdc-typography lmnt mdc-typography--caption"
            >
               
              cool description
            </span>
          </span>
          <span
            class="mdc-typography lmnt mdc-typography--body2"
          />
        </div>
        <div
          class="lmnt lmnt-group buttonGroup"
          style="display: flex; flex-direction: column; justify-content: flex-start; align-items: baseline; gap: 8px;"
        >
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--full-width lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              create quote
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--full-width lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              edit
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="header_main"
      >
        <div
          class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
        >
          <span
            class="lmnt-badge--label__label"
          >
            myBadge
          </span>
        </div>
        <span
          class="mdc-typography lmnt mdc-typography--headline5"
        >
          Test
        </span>
        <span
          class="mdc-typography lmnt mdc-typography--body2"
        >
          <span
            class="mdc-typography lmnt mdc-typography--caption"
          >
             
            cool description
          </span>
        </span>
        <span
          class="mdc-typography lmnt mdc-typography--body2"
        />
      </div>
      <div
        class="lmnt lmnt-group buttonGroup"
        style="display: flex; flex-direction: column; justify-content: flex-start; align-items: baseline; gap: 8px;"
      >
        <button
          class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--full-width lmnt-button--themeDefault mdc-touch-target-wrapper"
          type="button"
        >
          <span
            class="mdc-button__ripple"
          />
          <span
            class="mdc-button__label"
          >
            create quote
          </span>
          <span
            class="mdc-button__touch"
          />
        </button>
        <button
          class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--full-width lmnt-button--themeDefault mdc-touch-target-wrapper"
          type="button"
        >
          <span
            class="mdc-button__ripple"
          />
          <span
            class="mdc-button__label"
          >
            edit
          </span>
          <span
            class="mdc-button__touch"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": undefined,
  "unmount": [Function],
}
`;

exports[`Header Should render component for screen width smaller than 720 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="header_main"
        >
          <div
            class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
          >
            <span
              class="lmnt-badge--label__label"
            >
              myBadge
            </span>
          </div>
          <span
            class="mdc-typography lmnt mdc-typography--headline5"
          >
            Test
          </span>
          <span
            class="mdc-typography lmnt mdc-typography--body2"
          >
            <span
              class="mdc-typography lmnt mdc-typography--caption"
            >
               
              cool description
            </span>
          </span>
          <span
            class="mdc-typography lmnt mdc-typography--body2"
          />
        </div>
        <div
          class="lmnt lmnt-group buttonGroup"
          style="display: flex; flex-direction: column; justify-content: flex-start; align-items: baseline; gap: 8px;"
        >
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--full-width lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              create quote
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--full-width lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              edit
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="header_main"
      >
        <div
          class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
        >
          <span
            class="lmnt-badge--label__label"
          >
            myBadge
          </span>
        </div>
        <span
          class="mdc-typography lmnt mdc-typography--headline5"
        >
          Test
        </span>
        <span
          class="mdc-typography lmnt mdc-typography--body2"
        >
          <span
            class="mdc-typography lmnt mdc-typography--caption"
          >
             
            cool description
          </span>
        </span>
        <span
          class="mdc-typography lmnt mdc-typography--body2"
        />
      </div>
      <div
        class="lmnt lmnt-group buttonGroup"
        style="display: flex; flex-direction: column; justify-content: flex-start; align-items: baseline; gap: 8px;"
      >
        <button
          class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--full-width lmnt-button--themeDefault mdc-touch-target-wrapper"
          type="button"
        >
          <span
            class="mdc-button__ripple"
          />
          <span
            class="mdc-button__label"
          >
            create quote
          </span>
          <span
            class="mdc-button__touch"
          />
        </button>
        <button
          class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--full-width lmnt-button--themeDefault mdc-touch-target-wrapper"
          type="button"
        >
          <span
            class="mdc-button__ripple"
          />
          <span
            class="mdc-button__label"
          >
            edit
          </span>
          <span
            class="mdc-button__touch"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": undefined,
  "unmount": [Function],
}
`;

exports[`Header Should render component for screen width smaller than 840 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="header_main"
        >
          <div
            class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
          >
            <span
              class="lmnt-badge--label__label"
            >
              myBadge
            </span>
          </div>
          <span
            class="mdc-typography lmnt mdc-typography--headline5"
          >
            Test
          </span>
          <span
            class="mdc-typography lmnt mdc-typography--body2"
          >
            cool description
          </span>
        </div>
        <div
          class="lmnt lmnt-group buttonGroup"
          style="display: flex; flex-direction: row; justify-content: flex-start; align-items: baseline; gap: 8px;"
        >
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              create quote
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              edit
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="header_main"
      >
        <div
          class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
        >
          <span
            class="lmnt-badge--label__label"
          >
            myBadge
          </span>
        </div>
        <span
          class="mdc-typography lmnt mdc-typography--headline5"
        >
          Test
        </span>
        <span
          class="mdc-typography lmnt mdc-typography--body2"
        >
          cool description
        </span>
      </div>
      <div
        class="lmnt lmnt-group buttonGroup"
        style="display: flex; flex-direction: row; justify-content: flex-start; align-items: baseline; gap: 8px;"
      >
        <button
          class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--themeDefault mdc-touch-target-wrapper"
          type="button"
        >
          <span
            class="mdc-button__ripple"
          />
          <span
            class="mdc-button__label"
          >
            create quote
          </span>
          <span
            class="mdc-button__touch"
          />
        </button>
        <button
          class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--themeDefault mdc-touch-target-wrapper"
          type="button"
        >
          <span
            class="mdc-button__ripple"
          />
          <span
            class="mdc-button__label"
          >
            edit
          </span>
          <span
            class="mdc-button__touch"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": undefined,
  "unmount": [Function],
}
`;

exports[`Header Should render component for screen width smaller than 1024 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="header_main"
        >
          <div
            class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
          >
            <span
              class="lmnt-badge--label__label"
            >
              myBadge
            </span>
          </div>
          <span
            class="mdc-typography lmnt mdc-typography--headline4"
          >
            Test
          </span>
          <span
            class="mdc-typography lmnt mdc-typography--body2"
          >
            cool description
          </span>
        </div>
        <div
          class="lmnt lmnt-group buttonGroup"
          style="display: flex; flex-direction: row; justify-content: flex-start; align-items: baseline; gap: 8px;"
        >
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              create quote
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              edit
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="header_main"
      >
        <div
          class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
        >
          <span
            class="lmnt-badge--label__label"
          >
            myBadge
          </span>
        </div>
        <span
          class="mdc-typography lmnt mdc-typography--headline4"
        >
          Test
        </span>
        <span
          class="mdc-typography lmnt mdc-typography--body2"
        >
          cool description
        </span>
      </div>
      <div
        class="lmnt lmnt-group buttonGroup"
        style="display: flex; flex-direction: row; justify-content: flex-start; align-items: baseline; gap: 8px;"
      >
        <button
          class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--themeDefault mdc-touch-target-wrapper"
          type="button"
        >
          <span
            class="mdc-button__ripple"
          />
          <span
            class="mdc-button__label"
          >
            create quote
          </span>
          <span
            class="mdc-button__touch"
          />
        </button>
        <button
          class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--themeDefault mdc-touch-target-wrapper"
          type="button"
        >
          <span
            class="mdc-button__ripple"
          />
          <span
            class="mdc-button__label"
          >
            edit
          </span>
          <span
            class="mdc-button__touch"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": undefined,
  "unmount": [Function],
}
`;

exports[`Header Should render component for screen width smaller than 1440 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="header_main"
        >
          <div
            class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
          >
            <span
              class="lmnt-badge--label__label"
            >
              myBadge
            </span>
          </div>
          <span
            class="mdc-typography lmnt mdc-typography--headline4"
          >
            Test
          </span>
          <span
            class="mdc-typography lmnt mdc-typography--body2"
          >
            cool description
          </span>
        </div>
        <div
          class="desktopButtonGroup"
        >
          <div
            class="lmnt lmnt-group"
            style="display: flex; flex-direction: row; justify-content: flex-start; align-items: baseline; gap: 8px;"
          >
            <button
              class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--themeDefault mdc-touch-target-wrapper"
              type="button"
            >
              <span
                class="mdc-button__ripple"
              />
              <span
                class="mdc-button__label"
              >
                create quote
              </span>
              <span
                class="mdc-button__touch"
              />
            </button>
            <button
              class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--themeDefault mdc-touch-target-wrapper"
              type="button"
            >
              <span
                class="mdc-button__ripple"
              />
              <span
                class="mdc-button__label"
              >
                edit
              </span>
              <span
                class="mdc-button__touch"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="header_main"
      >
        <div
          class="lmnt lmnt-badge lmnt-badge--label lmnt-badge--label-gray mdc-typography--caption-bold"
        >
          <span
            class="lmnt-badge--label__label"
          >
            myBadge
          </span>
        </div>
        <span
          class="mdc-typography lmnt mdc-typography--headline4"
        >
          Test
        </span>
        <span
          class="mdc-typography lmnt mdc-typography--body2"
        >
          cool description
        </span>
      </div>
      <div
        class="desktopButtonGroup"
      >
        <div
          class="lmnt lmnt-group"
          style="display: flex; flex-direction: row; justify-content: flex-start; align-items: baseline; gap: 8px;"
        >
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--filled-primary mdc-button--raised lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              create quote
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
          <button
            class="lmnt mdc-button lmnt-button mdc-button--touch lmnt-button--outlined-primary mdc-button--outlined lmnt-button--themeDefault mdc-touch-target-wrapper"
            type="button"
          >
            <span
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              edit
            </span>
            <span
              class="mdc-button__touch"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": undefined,
  "unmount": [Function],
}
`;
